--- a/public/components/auth/login/login.html
+++ b/public/components/auth/login/login.html
@@ -1,12 +1,12 @@
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <form name="loginForm" novalidate>
-            <div class="form-group well">
+        <form name="loginForm" class="well" novalidate>
+            <div class="form-group">
                 <label for="email">E-mail:</label>
                 <input class="form-control" type="text" name="email" ng-model="login.email">
             </div>
             <div class="form-group">
-                <label for="password"></label>
+                <label for="password">Password:</label>
                 <input type="password" class="form-control" name="password" ng-model="login.password">
             </div>
             <button class="btn btn-primary center-block" ng-click="login()">Login</button>
