--- a/public/components/auth/signup/signup.html
+++ b/public/components/auth/signup/signup.html
@@ -1,23 +1,23 @@
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <form name="signupForm" novalidate>
+        <form name="signupForm" class="well" novalidate>
             <div class="form-group">
-                <label for="name"></label>
+                <label for="name">Name:</label>
                 <input type="text" class="form-control" name="name" ng-model="signup.name">
             </div>
             <div class="form-group">
-                <label for="email"></label>
-                <input type="text" class="form-control" name="email" ng-model="signup.email">
+                <label for="username">Username:</label>
+                <input type="text" class="form-control" name="username" ng-model="signup.username">
             </div>
             <div class="form-group">
-                <label for="password"></label>
+                <label for="password">Password:</label>
                 <input type="password" class="form-control" name="password" ng-model="signup.password">
             </div>
             <div class="form-group">
-                <label for="paswordRepeat"></label>
+                <label for="paswordRepeat">Re-Enter Password:</label>
                 <input type="text" class="form-control" name="passwordRepeat" ng-model="passwordRepeat">
             </div>
-            <button class="btn btn-primary center-block" ng-click="signup()"></button>
+            <button class="btn btn-primary center-block" ng-click="signup()">OK</button>
         </form>
     </div>
 </div>
